@@ -1,5 +1,12 @@
 2014-05-19  Corinna Vinschen  <corinna@vinschen.de>
 
+	* net.cc (call_gaa): Fix setting pa_ret pointer in case of an error
+	from GetAdaptersAddresses (CID 60218).
+	(get_ifs): Add missing braces in AF_INET6 case which broke netmask
+	computation.  Break out of loop if prefix gets <= 0 (CID 59939).
+
+2014-05-19  Corinna Vinschen  <corinna@vinschen.de>
+
 	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 31.
 
 2014-05-19  Corinna Vinschen  <corinna@vinschen.de>
